xp3_istio_wasme_rust_hello_header/echoserver_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  labels:
    app: echoserver
    service: echoserver
spec:
  selector:
    app: echoserver
  ports:
    - port: 80
      targetPort: 8080
      name: http
